[package]
name = "odebug"
authors = ["orgrinrt", "Hiisi Digital"]
version = "0.0.1"
edition = "2021"
description = """
Simple and flexible debug logging utility that allows simple and practical logging to a text file especially during proc-macro compilation.
"""
license-file = "LICENSE"
readme = "README.md"
keywords = ["debug", "logging", "proc-macro", "development", "file-logger"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "development-tools::debugging", "development-tools::testing"]
documentation = "https://docs.rs/odebug"
homepage = "https://github.com/orgrinrt/odebug"
repository = "https://github.com/orgrinrt/odebug"

[dependencies]
once_cell = "1.21.1"


[features]
default = ["use_workspace", "output_to_target"]
use_workspace = []
output_to_target = []
always_log = []
test_suite_a = []
test_suite_b = ["use_workspace"]
test_suite_c = ["output_to_target"]
